# wagtailcodeblock

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements_test.txt  setup.py  test-requirements.txt  tox.ini
tests/: models.py  settings.py  test_blocks.py  urls.py
tests/migrations/: 0001_initial.py
wagtailcodeblock/: blocks.py  settings.py  wagtail_hooks.py
wagtailcodeblock/static/wagtailcodeblock/css/: prism-a11y-dark.css  prism-dracula.css  prism-material-dark.css  prism-material-light.css  prism-material-oceanic.css  prism-nord.css  prism-shades-of-purple.css  prism-synthwave84.css  prism-vsc-dark-plus.css  prism.min.css  wagtail-code-block.css  wagtail-code-block.min.css
wagtailcodeblock/static/wagtailcodeblock/js/: prism.min.js  wagtailcodeblock.js
wagtailcodeblock/templates/wagtailcodeblock/: code_block.html  code_block_form.html  code_block_nonsense.html  codeblock.html  raw_code.html
wagtailcodeblock/templatetags/: wagtailcodeblock_tags.py
